# pvz_rust

./: .gitignore  Cargo.toml  README.md  game_mechanics_and_values.md  mechanics_and_values.md
assets/data/: armor.ron  display.ron  game_config.ron  grid.ron  plants.ron  zombies.ron
assets/data/levels/: level_1.ron  level_1_1.ron
src/: game_data.rs  main.rs  save.rs  states.rs
src/animations/: mod.rs  plugin.rs
src/armors/: mod.rs  plugin.rs
src/audio/: mod.rs  plugin.rs
src/card_select/: mod.rs  plugin.rs
src/game_config/: mod.rs  plugin.rs
src/grid/: config.rs  coords.rs  mod.rs  plugin.rs  render.rs
src/levels/: current_level.rs  data.rs  level_balance.rs  load.rs  mod.rs  plugin.rs  progress.rs  wave_spawn.rs
src/loading/: mod.rs  plugin.rs  ron_asset.rs
src/plants/: card_color.rs  mod.rs  plugin.rs  stats.rs  targeting.rs  traits.rs
src/projectiles/: mod.rs  plugin.rs
src/shop/: mod.rs  planting.rs  plugin.rs  slots.rs  ui.rs
src/sun/: count.rs  mod.rs  plugin.rs
src/ui/: adventure_progress.rs  card_select.rs  main_menu.rs  mod.rs  playing.rs  plugin.rs
src/zombies/: dancing.rs  hp.rs  mod.rs  plugin.rs
