[package]
name = "pvz_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_egui = "0.28"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand = "0.8"
walkdir = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
