[package]
name = "pvz_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy_egui = "0.39.1"
serde = { version = "1", features = ["derive"] }
ron = "0.12.1"
rand = "0.10.1"
walkdir = "2"
dirs = "6.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
